# edcalculator

./: .env.example  .htaccess  .replit  README.md  app.py  generate_requirements.py  materials.py  materials_manager.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  stl_processor.py  tutorial.py
.streamlit/: config.toml
backend/: __init__.py  api.py  base.py  database.py  models.py  recommendation_engine.py  schemas.py
documentation/: README.txt  app_structure.txt  code_documentation.txt  deployment_instructions.txt  project_archive.sh
