[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
    "uvicorn[standard]>=0.34.0",
    "stl>=0.0.3",
    "numpy>=2.2.3",
    "numpy-stl>=3.2.0",
    "requests>=2.32.3",
    "openai>=1.66.3",
    "python-multipart>=0.0.20",
    "streamlit-extras>=0.6.0",
]
